--- a/frontend/style.css
+++ b/frontend/style.css
@@ -174,7 +174,35 @@ section {
     transform: translateX(50px);
   }
 }
-
+/*loading*/
+.overlay {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(16, 16, 16, 0.5);
+}
+.overlay.active {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--contrast-color);
+}
+.overlay > div {
+  background-color: var(--contrast-color);
+  color: var(--main-color);
+  border-radius: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  max-width: 40rem;
+}
+.overlay > div > * {
+  margin: 2rem;
+}
 /*--------------------
 Navigation starts here
 ----------------------*/
