--- a/frontend/style.css
+++ b/frontend/style.css
@@ -594,6 +594,55 @@ Contact us ends here
   color: var(--contrast-color);
   border-top-color: var(--contrast-color);
 }
+/* Order */
+.order {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 1rem;
+  justify-content: space-between;
+}
+.order h2 {
+  margin: 0;
+  padding-bottom: 1rem;
+  font-size: 2rem;
+}
+.order .cart-list-container {
+  padding: 0;
+}
+.order-info {
+  flex: 3 1 60rem;
+}
+.order-info > div {
+  border: 0.1rem var(--contrast-color) solid;
+  border-radius: 0.5rem;
+  background-color: var(--main-color);
+  padding: 1rem;
+  margin: 1rem;
+}
+.order-info > div:first-child {
+  margin-top: 0;
+}
+.order-action {
+  flex: 1 1 20rem;
+  border: 0.1rem var(--contrast-color) solid;
+  border-radius: 0.5rem;
+  background-color: var(--main-color);
+  padding: 1rem;
+}
+.order-action > ul {
+  padding: 0;
+  list-style-type: none;
+}
+.order-action li {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+}
+.order-action .total {
+  font-size: 2rem;
+  font-weight: bold;
+  color: #c04000;
+}
 /*---------------
 footer styles starts here
 -----------------*/
