--- a/frontend/style.css
+++ b/frontend/style.css
@@ -570,9 +570,48 @@ profile styles
 */
 .profile {
   display: flex;
-  justify-content: space-around;
-  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: flex-start;
+}
+.form-containerp {
   align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+.form-itemsp {
+  display: flex;
+  flex-direction: column;
+  width: 20rem;
+  padding: 2rem;
+  border: 0.1rem #fe5f00 solid;
+  border-radius: 0.5rem;
+}
+.form-itemsp li {
+  display: flex;
+  flex-direction: column;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+.profile-info {
+  flex: 1 1 20rem;
+  padding-left: 10px;
+}
+.profile-orders {
+  flex: 3 1 60rem;
+  margin-left: 1rem;
+}
+
+table {
+  width: 100%;
+}
+th {
+  text-align: left;
+}
+tbody > tr:nth-child(odd) {
+  background-color: #f0f0f0;
+}
+td {
+  padding: 0.5rem;
 }
 /*---------------
 Contact us starts here
